fix for issue on mobile responsive on clicking sidebar left menu

--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -871,6 +871,9 @@ td.dataTables_empty {
 .bootstrap-datetimepicker-widget table td.active {
   color:#fff !important;
 }
+.overflowHidden {
+	overflow-x: hidden;
+}
 /* Responsive media queries */
 @media (min-width: 991px) {
   /* gdpr buttons */
